<resources>
    <string name="app_name">Beaud_Devanthery_TimeTracker</string>
    <string name="title_home">History</string>
    <string name="title_dashboard">Create</string>
    <string name="title_notifications">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="client_created">Client created</string>

    <!-- Strings related to login -->
    <string name="error_invalid_password">Password invalid</string>
    <string name="error_incorrect_password">Password incrorrect</string>
    <string name="error_invalid_username">Username invalid</string>
    <string name="error_username_required">Username Required</string>
    <string name="employee_created">An employee was created</string>

    <!-- CREATE TASK fragment  -->
    <!-- labels-->
    <string name="CreateTask_lbl">Create a new task</string>
    <string name="modifyTask_lbl">modify a task</string>
    <string name="CreateTask_TaskName_lbl">Task name</string>
    <string name="CreateTask_Description_lbl">Description</string>
    <string name="CreateTask_StartTime_lbl">Start Time:</string>
    <string name="CreateTask_endTime_lbl">end Time:</string>


    <!--textbox Hints-->
    <string name="CreateTask_title_txt">Title</string>
    <string name="CreateTask_description_txt">small description</string>
    <string name="CreateTask_starttime_txt">00:00</string>
    <string name="CreateTask_endtime_txt">00:00</string>

    <!-- buttons text   -->

    <string name="createTask_create_btn">create</string>
    <string name="modifyTask_create_btn">modify</string>
    <string name="modifyTask_cancel_btn">cancel</string>
    <string name="btnRegister_profile">Create account</string>



    <!-- HISTORY FRAGMENT-->
    <!--  labels  -->
    <string name="History_allTasks_lbl">All tasks</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>