<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_history"
        android:name="ui.mgmt.history.HistoryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_Add"
        android:name="ui.mgmt.createtask.CreateTaskFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_createtask" />

    <fragment
        android:id="@+id/navigation_Profile"
        android:name="ui.mgmt.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_Settings"
        android:name="ui.mgmt.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>