<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orange"
    tools:context="ui.mgmt.modifytask.ModifyTask">

    <TextView
        android:id="@+id/textViewmodify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/modifyTask_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="323dp"
        android:layout_height="497dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTintMode="src_atop"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:visibility="visible">

        <TextView
            android:id="@+id/lblTaskNamemodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/CreateTask_TaskName_lbl"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblDescriptionmodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="116dp"
            android:text="@string/CreateTask_Description_lbl"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblEndTimemodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="360dp"
            android:text="@string/CreateTask_endTime_lbl"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblStartTimemodify"
            android:layout_width="77dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="268dp"
            android:text="@string/CreateTask_StartTime_lbl"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtTitlemodify"
            android:layout_width="268dp"
            android:layout_height="46dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/CreateTask_title_txt"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/lightgrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtDescriptionmodify"
            android:layout_width="267dp"
            android:layout_height="102dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="148dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/CreateTask_description_txt"
            android:textColor="@color/white"
            android:textColorHint="@color/lightgrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/txtStartTimemodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="304dp"
            android:ems="10"
            android:hint="@string/CreateTask_starttime_txt"
            android:inputType="time"
            android:textColor="@color/white"
            android:textColorHint="@color/lightgrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEndTimemodify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="388dp"
            android:ems="10"
            android:hint="@string/CreateTask_endtime_txt"
            android:inputType="time"
            android:textColor="@color/white"
            android:textColorHint="@color/lightgrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnModify"
            android:layout_width="278dp"
            android:layout_height="46dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/orange"
            android:foregroundTint="#FF9800"
            android:text="@string/modifyTask_create_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/orange"
        android:foregroundTint="#FF9800"
        android:text="@string/modifyTask_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>